crates/luminara_editor/check_utf8.log
cargo : warning: variable does not need to
 be mutable
発生場所 行:1 文字:1
+ cargo check --example basic_editor 2>&1 
| Out-File -Encoding utf8 che ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecifie 
   d: (warning: variab...d to be mutable  
  :String) [], RemoteException
    + FullyQualifiedErrorId : NativeComma 
   ndError
 
  --> crates\luminara_render\src\fluid_sys
tems.rs:71:18
   |
71 | ...ntity, mut renderer) in fluid_r...
   |           ----^^^^^^^^
   |           |
   |           help: remove this `mut`
   |
   = note: `#[warn(unused_mut)]` (part of 
`#[warn(unused)]`) on by default

warning: associated function `from_materia
l` is never used
   --> crates\luminara_render\src\instanci
ng.rs:153:8
    |
151 | impl MaterialSortKey {
    | -------------------- associated func
tion in this implementation
152 |     /// Create sort key from mate...
153 |     fn from_material(material: &P...
    |        ^^^^^^^^^^^^^
    |
    = note: `#[warn(dead_code)]` (part of 
`#[warn(unused)]`) on by default

warning: function `calculate_transition_pr
ogress` is never used
   --> crates\luminara_render\src\lod_syst
em.rs:168:4
    |
168 | fn calculate_transition_progress(
    |    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: field `enable_hierarchical` is ne
ver read
   --> crates\luminara_render\src\occlusio
n_culling.rs:126:5
    |
108 | pub struct OcclusionCullingSystem {
    |            ---------------------- fi
eld in this struct
...
126 |     enable_hierarchical: bool,
    |     ^^^^^^^^^^^^^^^^^^^

warning: `luminara_render` (lib) generated
 4 warnings (run `cargo fix --lib -p lumin
ara_render` to apply 1 suggestion)
    Checking luminara_editor v0.1.0 (C:\de
v\Luminara-Engine\crates\luminara_editor)
warning: unused import: `RenderOnce`
 --> crates\luminara_editor\src\core\setti
ngs\settings_category.rs:5:42
  |
5 |     div, px, IntoElement, ParentElemen
t, RenderOnce, Styled,
  |                                       
   ^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part 
of `#[warn(unused)]`) on by default

warning: unused imports: `AnyElement`, `Cl
ickEvent`, `Overflow`, and `View`
 --> crates\luminara_editor\src\ui\compone
nts\dropdown.rs:3:16
  |
3 |     ElementId, AnyElement, ClickEvent,
 WindowContext, View, prelude::*, Overflow
,
  |                ^^^^^^^^^^  ^^^^^^^^^^ 
                ^^^^              ^^^^^^^^

warning: unused import: `parking_lot::RwLo
ck`
  --> crates\luminara_editor\src\features\
scene_builder\box_.rs:15:5
   |
15 | use parking_lot::RwLock;
   |     ^^^^^^^^^^^^^^^^^^^

warning: unused imports: `View` and `Windo
wContext`
 --> crates\luminara_editor\src\features\s
cene_builder\hierarchy.rs:7:5
  |
7 |     WindowContext, View, MouseButton, 
MouseDownEvent, prelude::*,
  |     ^^^^^^^^^^^^^  ^^^^

warning: unused import: `parking_lot::RwLo
ck`
  --> crates\luminara_editor\src\features\
scene_builder\hierarchy.rs:10:5
   |
10 | use parking_lot::RwLock;
   |     ^^^^^^^^^^^^^^^^^^^

warning: unused import: `parking_lot::RwLo
ck`
  --> crates\luminara_editor\src\features\
scene_builder\inspector.rs:10:5
   |
10 | use parking_lot::RwLock;
   |     ^^^^^^^^^^^^^^^^^^^

warning: unused import: `std::collections:
:HashSet`
  --> crates\luminara_editor\src\features\
scene_builder\inspector.rs:11:5
   |
11 | use std::collections::HashSet;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
   --> crates\luminara_editor\src\features
\scene_builder\inspector.rs:406:48
    |
406 | ...                   if let Ok(mut 
world) = engine.world_mut() {
    |                              ^^^^^^^
^^^^^^   ------------------ this expressio
n has type `parking_lot::lock_api::RwLockW
riteGuard<'_, parking_lot::RawRwLock, Worl
d>`
    |                              |
    |                              expecte
d `RwLockWriteGuard<'_, RawRwLock, World>`
, found `Result<_, _>`
    |
    = note: expected struct `parking_lot::
lock_api::RwLockWriteGuard<'_, parking_lot
::RawRwLock, World>`
                 found enum `std::result::
Result<_, _>`

warning: unused variable: `theme`
   --> crates\luminara_editor\src\ui\layou
ts\resizable_panel.rs:439:13
    |
439 |         let theme = self.theme.clone
();
    |             ^^^^^ help: if this is i
ntentional, prefix it with an underscore: 
`_theme`
    |
    = note: `#[warn(unused_variables)]` (p
art of `#[warn(unused)]`) on by default

warning: unused variable: `theme`
   --> crates\luminara_editor\src\features
\asset_vault\asset_grid.rs:306:29
    |
306 |                         let theme = 
this.theme.clone();
    |                             ^^^^^ he
lp: if this is intentional, prefix it with
 an underscore: `_theme`

warning: unused variable: `theme`
   --> crates\luminara_editor\src\features
\account\account_panel.rs:710:13
    |
710 |         let theme = self.theme.clone
();
    |             ^^^^^ help: if this is i
ntentional, prefix it with an underscore: 
`_theme`

warning: unused variable: `theme`
   --> crates\luminara_editor\src\features
\scene_builder\bottom_tabs.rs:498:13
    |
498 |         let theme = self.theme.clone
();
    |             ^^^^^ help: if this is i
ntentional, prefix it with an underscore: 
`_theme`

warning: unused variable: `cx`
   --> crates\luminara_editor\src\features
\scene_builder\hierarchy.rs:329:61
    |
329 | ...                   .on_click(move
 |_e, cx| {
    |                                     
      ^^ help: if this is intentional, pre
fix it with an underscore: `_cx`

warning: unused variable: `theme`
   --> crates\luminara_editor\src\features
\scene_builder\toolbar.rs:223:13
    |
223 |         let theme = self.theme.clone
();
    |             ^^^^^ help: if this is i
ntentional, prefix it with an underscore: 
`_theme`

warning: unused variable: `theme`
    --> crates\luminara_editor\src\feature
s\global_search\mod.rs:1272:13
     |
1272 |         let theme = self.theme.clon
e();
     |             ^^^^^ help: if this is 
intentional, prefix it with an underscore:
 `_theme`

For more information about this error, try
 `rustc --explain E0308`.
warning: `luminara_editor` (lib) generated
 14 warnings
error: could not compile `luminara_editor`
 (lib) due to 1 previous error; 14 warning
s emitted
